# tripex

./: .gitignore  CMakeLists.txt  Info.plist.in  LICENSE  README.md
src/Tripex/: Actor.cpp  AudioDevice.cpp  AudioDevice.h  AudioDeviceSDL.cpp  AudioDeviceSDL.h  AudioSource.cpp  AudioSource.h  ColorRgb.h  EffectBezierCube.cpp  EffectBlank.cpp  EffectCollapsingLightSphere.cpp  Error.cpp  Error.h  Misc.cpp  Platform.h  RendererOpenGL.cpp  RendererOpenGL.h  Tripex.cpp  main_sdl.cpp
